@@ -15,6 +15,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Make large rectangles close properly with MyPaint brushes. Thanks haxekhaex2 for reporting.
  * Fix: Allow horizontal scrolling in the preferences dialog so the close button doesn't get thrown off-screen on mobile. Thanks Xkower for reporting.
  * Fix: Allow scrolling of preferences and start dialog sidebar.
+ * Fix: Move preferences dialog sidebar to the top on macOS and to the bottom on Android, to fit better with how those systems work. Thanks Snover and Xkower.
 
 2023-11-12 Version 2.2.0-beta.10
  * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
